--- a/source/Makefile
+++ b/source/Makefile
@@ -2,5 +2,5 @@ CXX=g++
 CXXFLAGS=-std=c++11 -I.
 
 cbmtext: cbmtext.o
-	$(CXX) -o cbmtext cbmtext.o $(CFLAGS) $(LIBS)
+	$(CXX) -static -o cbmtext cbmtext.o $(CFLAGS) $(LIBS)
 
