--- a/source/Makefile
+++ b/source/Makefile
@@ -1,6 +1,13 @@
+UNAME_S := $(shell uname -s)
+
+ifeq ($(UNAME_S),Darwin)
+  STATIC := 
+else
+  STATIC := -static
+endif
+
 CXX=g++
 CXXFLAGS=-std=c++11 -I.
 
 cbmtext: cbmtext.o
-	$(CXX) -o cbmtext cbmtext.o $(CFLAGS) $(LIBS)
-
+	$(CXX) $(STATIC) -o cbmtext cbmtext.o $(CFLAGS) $(LIBS)
